[package]
name = "ctf-commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
termimad = "0.29.1"
terminal-light = "1.2.0"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
