[package]
name = "ctf-commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
keyring = "2.3.2"
rpassword = "7.3.1"
ratatui = "0.26.1"
crossterm = "0.27.0"
